automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
   <head>
     <title>
-      This is 
+      This is the TITLE!
     </title>
+  This is the HEAD!!
   </head>
 </html>
